--- a/deploy/ansible/files/docker-compose.release.yml
+++ b/deploy/ansible/files/docker-compose.release.yml
@@ -51,7 +51,7 @@ services:
     ports:
       - "6340:6379"
     volumes:
-      - ./redis:/var/lib/redis
+      - ./redis:/data
     logging:
       options:
         max-size: "30m"
