--- a/deploy/ansible/files/conf/metabase.nginx.conf
+++ b/deploy/ansible/files/conf/metabase.nginx.conf
@@ -1,10 +1,10 @@
 upstream server.backend {
-    server server:5000;
+    server server:3001;
 }
 
 server {
   listen 80;
-  server_name api.balconygames.com;
+  server_name metabase.balconygames.com;
 
   location / {
     proxy_set_header X-Real-Ip $remote_addr;
@@ -25,7 +25,7 @@ server {
 server {
   listen      443           ssl http2;
   listen [::]:443           ssl http2;
-  server_name               api.balconygames.com;
+  server_name               metabase.balconygames.com;
 
   ssl                       on;
 
@@ -42,9 +42,9 @@ server {
   ssl_stapling_verify       on;
   resolver                  8.8.8.8 8.8.4.4;
 
-  ssl_certificate           /etc/letsencrypt/live/api.balconygames.com/fullchain.pem;
-  ssl_certificate_key       /etc/letsencrypt/live/api.balconygames.com/privkey.pem;
-  ssl_trusted_certificate   /etc/letsencrypt/live/api.balconygames.com/chain.pem;
+  ssl_certificate           /etc/letsencrypt/live/metabase.balconygames.com/fullchain.pem;
+  ssl_certificate_key       /etc/letsencrypt/live/metabase.balconygames.com/privkey.pem;
+  ssl_trusted_certificate   /etc/letsencrypt/live/metabase.balconygames.com/chain.pem;
 
   access_log                /dev/stdout;
   error_log                 /dev/stderr info;
