--- a/deploy/ansible/files/docker-compose.release.yml
+++ b/deploy/ansible/files/docker-compose.release.yml
@@ -130,6 +130,8 @@ services:
     restart: always
     volumes:
      - ./conf/nginx.conf:/etc/nginx/conf.d/default.conf
+     - ./conf/metabase.nginx.conf:/etc/nginx/conf.d/metabase.conf
+     - ./conf/dashboard.nginx.conf:/etc/nginx/conf.d/dashboard.conf
      - ./certs:/etc/letsencrypt
      - ./certs-data:/data/letsencrypt
     links:
@@ -145,6 +147,30 @@ services:
     environment:
       - NGINX_PORT=80
     command: /bin/ash -c "exec nginx -g 'daemon off;'"
+    logging:
+      options:
+        max-size: "30m"
+        max-file: "3"
+      driver: "json-file"
+
+  metabase-app:
+    image: metabase/metabase
+    restart: always
+    ports:
+      - 3001:3000
+    volumes:
+      - /home/app/metabase-data:/metabase-data
+    environment:
+      MB_DB_TYPE: postgres
+      MB_DB_DBNAME: metabase
+      MB_DB_PORT: 5432
+      MB_DB_USER: postgres
+      MB_DB_PASS: 59bf71f6-ca01-431b-95a3-1fb1d7aa7847
+      MB_DB_HOST: postgres
+    depends_on:
+      - postgres
+    links:
+      - postgres
     logging:
       options:
         max-size: "30m"
