--- a/deploy/ansible/files/conf/dashboard.nginx.conf
+++ b/deploy/ansible/files/conf/dashboard.nginx.conf
@@ -1,23 +1,22 @@
-upstream server.backend {
-    server server:5000;
-}
-
 server {
   listen 80;
   server_name dashboard.balconygames.com;
 
-  location / {
-    proxy_set_header X-Real-Ip $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_set_header REMOTE_ADDR $remote_addr;
-
-    proxy_pass http://server.backend;
-  }
-
   location ~ /.well-known {
     allow all;
     root  /data/letsencrypt/;
+  }
+
+  location / {
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+    try_files $uri $uri/ /index.html;
+  }
+
+  error_page   500 502 503 504  /50x.html;
+
+  location = /50x.html {
+    root   /usr/share/nginx/html;
   }
 }
 
@@ -55,6 +54,7 @@ server {
     proxy_set_header Host $host;
     proxy_set_header REMOTE_ADDR $remote_addr;
 
-    proxy_pass http://server.backend;
+    proxy_pass http://dashboard.backend;
   }
 }
+
