--- a/deploy/ansible/files/conf/metabase.nginx.conf
+++ b/deploy/ansible/files/conf/metabase.nginx.conf
@@ -1,4 +1,4 @@
-upstream server.backend {
+upstream metabase.backend {
     server server:3001;
 }
 
@@ -12,7 +12,7 @@ server {
     proxy_set_header Host $host;
     proxy_set_header REMOTE_ADDR $remote_addr;
 
-    proxy_pass http://server.backend;
+    proxy_pass http://metabase.backend;
   }
 
   location ~ /.well-known {
@@ -55,6 +55,6 @@ server {
     proxy_set_header Host $host;
     proxy_set_header REMOTE_ADDR $remote_addr;
 
-    proxy_pass http://server.backend;
+    proxy_pass http://metabase.backend;
   }
 }
