continue with metabase

--- a/deploy/ansible/files/conf/metabase.nginx.conf
+++ b/deploy/ansible/files/conf/metabase.nginx.conf
@@ -1,26 +1,18 @@
 upstream metabase.backend {
-    server server:3001;
+    server metabase-app:3000;
 }
 
 server {
   listen 80;
   server_name metabase.balconygames.com;
 
-  location / {
-    proxy_set_header X-Real-Ip $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_set_header REMOTE_ADDR $remote_addr;
-
-    proxy_pass http://metabase.backend;
-  }
-
   location ~ /.well-known {
     allow all;
     root  /data/letsencrypt/;
   }
-}
 
+  return 301 https://$host$request_uri;
+}
 
 server {
   listen      443           ssl http2;
