--- a/deploy/ansible/files/conf/dashboard.nginx.conf
+++ b/deploy/ansible/files/conf/dashboard.nginx.conf
@@ -7,17 +7,7 @@ server {
     root  /data/letsencrypt/;
   }
 
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
-  }
-
-  error_page   500 502 503 504  /50x.html;
-
-  location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
+  return 301 https://$host$request_uri;
 }
 
 
@@ -49,12 +39,15 @@ server {
   error_log                 /dev/stderr info;
 
   location / {
-    proxy_set_header X-Real-Ip $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_set_header REMOTE_ADDR $remote_addr;
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+    try_files $uri $uri/ /index.html;
+  }
 
-    proxy_pass http://dashboard.backend;
+  error_page   500 502 503 504  /50x.html;
+
+  location = /50x.html {
+    root   /usr/share/nginx/html;
   }
 }
 
