--- a/deploy/ansible/files/conf/metabase.nginx.conf
+++ b/deploy/ansible/files/conf/metabase.nginx.conf
@@ -4,7 +4,7 @@ upstream metabase.backend {
 
 server {
   listen 80;
-  server_name metabase.balconygames.com;
+  server_name _;
 
   location ~ /.well-known {
     allow all;
