--- a/deploy/ansible/files/conf/nginx.conf
+++ b/deploy/ansible/files/conf/nginx.conf
@@ -4,7 +4,7 @@ upstream server.backend {
 
 server {
   listen 80;
-  server_name _;
+  server_name api.balconygames.com;
 
   location / {
     proxy_set_header X-Real-Ip $remote_addr;
