--- a/deploy/ansible/files/conf/metabase.nginx.ssl.conf
+++ b/deploy/ansible/files/conf/metabase.nginx.ssl.conf
@@ -11,16 +11,7 @@ server {
     root  /data/letsencrypt/;
   }
 
-  location / {
-    proxy_set_header X-Real-Ip $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_set_header REMOTE_ADDR $remote_addr;
-
-    proxy_pass http://metabase.backend;
-  }
-
-  // return 301 https://$host$request_uri;
+  return 301 https://$host$request_uri;
 }
 
 server {
