--- a/deploy/ansible/files/conf/nginx.ssl.conf
+++ b/deploy/ansible/files/conf/nginx.ssl.conf
@@ -1,15 +1,10 @@
-upstream metabase.backend {
-    server metabase-app:3000;
+upstream server.backend {
+    server server:5000;
 }
 
 server {
   listen 80;
-  server_name _;
-
-  location ~ /.well-known {
-    allow all;
-    root  /data/letsencrypt/;
-  }
+  server_name api.balconygames.com;
 
   location / {
     proxy_set_header X-Real-Ip $remote_addr;
@@ -17,16 +12,20 @@ server {
     proxy_set_header Host $host;
     proxy_set_header REMOTE_ADDR $remote_addr;
 
-    proxy_pass http://metabase.backend;
+    proxy_pass http://server.backend;
   }
 
-  // return 301 https://$host$request_uri;
+  location ~ /.well-known {
+    allow all;
+    root  /data/letsencrypt/;
+  }
 }
+
 
 server {
   listen      443           ssl http2;
   listen [::]:443           ssl http2;
-  server_name               metabase.balconygames.com;
+  server_name               api.balconygames.com;
 
   ssl                       on;
 
@@ -43,9 +42,9 @@ server {
   ssl_stapling_verify       on;
   resolver                  8.8.8.8 8.8.4.4;
 
-  ssl_certificate           /etc/letsencrypt/live/metabase.balconygames.com/fullchain.pem;
-  ssl_certificate_key       /etc/letsencrypt/live/metabase.balconygames.com/privkey.pem;
-  ssl_trusted_certificate   /etc/letsencrypt/live/metabase.balconygames.com/chain.pem;
+  ssl_certificate           /etc/letsencrypt/live/api.balconygames.com/fullchain.pem;
+  ssl_certificate_key       /etc/letsencrypt/live/api.balconygames.com/privkey.pem;
+  ssl_trusted_certificate   /etc/letsencrypt/live/api.balconygames.com/chain.pem;
 
   access_log                /dev/stdout;
   error_log                 /dev/stderr info;
@@ -56,6 +55,6 @@ server {
     proxy_set_header Host $host;
     proxy_set_header REMOTE_ADDR $remote_addr;
 
-    proxy_pass http://metabase.backend;
+    proxy_pass http://server.backend;
   }
 }
