comment lines properly

--- a/deploy/ansible/files/conf/dashboard.nginx.conf
+++ b/deploy/ansible/files/conf/dashboard.nginx.conf
@@ -19,9 +19,8 @@ server {
     root   /usr/share/nginx/html;
   }
 
-  // return 301 https://$host$request_uri;
+  # return 301 https://$host$request_uri;
 }
-
 
 server {
   listen      443           ssl http2;
