--- a/deploy/ansible/files/conf/metabase.nginx.conf
+++ b/deploy/ansible/files/conf/metabase.nginx.conf
@@ -20,7 +20,7 @@ server {
     proxy_pass http://metabase.backend;
   }
 
-  // return 301 https://$host$request_uri;
+  # return 301 https://$host$request_uri;
 }
 
 server {
